Lots of refactoring and namespacing

--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="./js/mondrian.js"></script>
+
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/main.css">
+
+  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-  <h1>Mondrian.js</h1>
-  <span id="r">Red</span>, <span id="b">Blue</span>, <span id="y">Yellow</span>, <span id="g">Gray</span>
-  <br>
-  <br>
-  <section class="columns group"></section>
+  <h1>MONDRIAN.JS</h1>
+  <div class="wrapper group">
+    <section class="columns group"></section>
 
-  <section class="rows group"></section>
-  <section class="canvas group">
-    <script>
-
-    </script>
-  </section>
+    <section class="rows group"></section>
+    <section class="canvas group"></section>
+  </div>
+  <span id="clear">CLEAR</span>
 </body>
 </html>
