Adds axes on all four sides

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 
     <section class="rows group"></section>
     <section class="canvas group"></section>
+    <section class="rows right group"></section>
+    <section class="columns right group"></section>
+
   </div>
-  <span id="clear">CLEAR</span>
+  <h1 id="clear">CLEAR</h1>
 </body>
 </html>
