IT WORKS\! Time to refactor\!

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
     <section class="rows right group"></section>
     <section class="columns right group"></section>
 
+    <section class="palette">
+      <h3>PALETTE</h3>
+      <article class="white paint"></article>
+      <article class="gray paint"></article>
+      <article class="yellow paint"></article>
+      <article class="red paint"></article>
+      <article class="blue paint"></article>
+    </section>
+
   </div>
   <h1 id="clear">CLEAR</h1>
 </body>
